--- a/LaTeX-Reports/A3/refs.bib
+++ b/LaTeX-Reports/A3/refs.bib
@@ -271,3 +271,34 @@
 	year = {2023}, 
 	note = {Accessed: 2024-02-29} 
 }
+
+@article{CobosMaximo2020FGCA,
+abstract = {The generalized cross-correlation(GCC) is regarded as the most popular approach for estimating the time difference of arrival (TDOA) between the signals received at two sensors. Time delay estimates are obtained by maximizing the GCC output, where the direct-path delay is usually observed as a prominent peak. Moreover, GCCs play also an important role in steered response power (SRP) localization algorithms, where the SRP functional can be written as an accumulation of the GCCs computed from multiple sensor pairs. Unfortunately, the accuracy of TDOA estimates is affected by multiple factors, including noise, reverberation and signal bandwidth. In this paper, a sub-band approach for time delay estimation aimed at improving the performance of the conventional GCC is presented. The proposed method is based on the extraction of multiple GCCs corresponding to different frequency bands of the cross-power spectrum phase in a sliding-window fashion. The major contributions of this paper include: 1) a sub-band GCC representation of the cross-power spectrum phase that, despite having a reduced temporal resolution, provides a more suitable representation for estimating the true TDOA; 2) such matrix representation is shown to be rank one in the ideal noiseless case, a property that is exploited in more adverse scenarios to obtain a more robust and accurate GCC; 3) we propose a set of low-rank approximation alternatives for processing the sub-band GCC matrix, leading to better TDOA estimates and source localization performance. An extensive set of experiments is presented to demonstrate the validity of the proposed approach.},
+issn = {2329-9290},
+journal = {IEEE/ACM transactions on audio, speech, and language processing},
+author = {Cobos, Maximo and Antonacci, Fabio and Comanducci, Luca and Sarti, Augusto},
+keywords = {GCC ; SRP-PHAT ; sub-band processing ; SVD ; Time delay estimation ; weighted SVD},
+language = {eng},
+pages = {1270-1281},
+publisher = {IEEE},
+title = {Frequency-Sliding Generalized Cross-Correlation: A Sub-Band Time Delay Estimation Approach},
+volume = {28},
+year = {2020},
+}
+
+@article{ChanY.T.1994Asae,
+abstract = {An effective technique in locating a source based on intersections of hyperbolic curves defined by the time differences of arrival of a signal received at a number of sensors is proposed. The approach is noniterative and gives an explicit solution. It is an approximate realization of the maximum-likelihood estimator and is shown to attain the Cramer-Rao lower bound near the small error region. Comparisons of performance with existing techniques of beamformer, spherical-interpolation, divide and conquer, and iterative Taylor-series methods are made. The proposed technique performs significantly better than spherical-interpolation, and has a higher noise threshold than divide and conquer before performance breaks away from the Cramer-Rao lower bound. It provides an explicit solution form that is not available in the beamforming and Taylor-series methods. Computational complexity is comparable to spherical-interpolation but substantially less than the Taylor-series method.< >},
+issn = {1053-587X},
+journal = {IEEE transactions on signal processing},
+author = {Chan, Y.T. and Ho, K.C.},
+address = {New York, NY},
+copyright = {1994 INIST-CNRS},
+keywords = {Algorithm ; Applied sciences ; Array signal processing ; Coordinate measuring machines ; Cramér–Rao bound ; Divide and conquer algorithms ; Efficient estimator ; Estimation theory ; Estimator ; Exact sciences and technology ; Interpolation ; Iterative method ; Iterative methods ; Mathematical optimization ; Mathematics ; Maximum likelihood estimation ; Military computing ; Multilateration ; Nonlinear equations ; Position measurement ; Radar ; Radiolocalization and radionavigation ; Sonar ; Telecommunications ; Telecommunications and information theory ; Upper and lower bounds},
+language = {eng},
+number = {8},
+pages = {1905-1915},
+publisher = {IEEE},
+title = {A simple and efficient estimator for hyperbolic location},
+volume = {42},
+year = {1994},
+}
